<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.syncscribe</groupId>
    <artifactId>syncscribe</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>
        <syncscribe.version>0.0.1-SNAPSHOT</syncscribe.version>
        <spring.oauth2.version>3.4.4</spring.oauth2.version>
        <spring.oauth2.jose.version>6.4.4</spring.oauth2.jose.version>
        <minio.version>8.5.17</minio.version>
        <postgresql.version>42.7.2</postgresql.version>
        <openapi.version>2.8.5</openapi.version>
        <logstash.version>8.0</logstash.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>common</module>
        <module>collaboration-service</module>
        <module>websocket-gateway</module>
        <module>email-service</module>
        <module>document-service</module>
        <module>idp-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.4.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
